# maritime_ec

./: .gitignore  .gitmodules  CMakeLists.txt
include/: maritime_ec.h
include/mec/: control.h  estimation.h  pid_controller.h  util.h
src/: .angvel_controller.c.swp  CMakeLists.txt  angvel_controller.c  angvel_controller.cpp  att_controller.c  att_controller.cpp  estimation.c  estimation.cpp  mixer.c  mixer.cpp  pid_controller.c  pid_controller.cpp  position_controller.c  position_controller.cpp  util.c  util.cpp  velocity_controller.c  velocity_controller.cpp
